# gpu_jpeg2k

./: CMakeLists.txt  README.md
file_format/: boxes.c
gpu_jpeg2k/: CMakeLists.txt  README.build  dec_main.c  enc_main.c  func.cu  gpu_jpeg2k.c  gpu_jpeg2k.h  main.c  results_gtx480_vs_gtx680.txt
gpu_jpeg2k/CMake/: FindFreeImage.cmake
gpu_jpeg2k/apps/: CMakeLists.txt  common.c  common.h  dec_main.c  enc_main.c  func.c  func.cu  func.h  list.c  list.h
gpu_jpeg2k/config/: CMakeLists.txt
gpu_jpeg2k/config_files/: lossless.config  lossy.config
gpu_jpeg2k/dwt/: CMakeLists.txt  dwt.cu  iwt.cu  kernel.cu
gpu_jpeg2k/include/: gpu_jpeg2k.h  memory.h
gpu_jpeg2k/klt/: CMakeLists.txt  adjust.cu  adjust.h  calc_cov_mat.cu  gs.cu  klt.cu  klt.h
gpu_jpeg2k/misc/: CMakeLists.txt  memory.h  memory_management.cu
gpu_jpeg2k/nvvp/: profile
gpu_jpeg2k/preprocessing/: CMakeLists.txt  mct.c  mct.h  preprocess_gpu.cu
gpu_jpeg2k/results/: results_gtx580_vs_gtx680.txt
gpu_jpeg2k/results/nvvp/: gtx480_ebcot_mqc_artificial.csv  gtx480_ebcot_mqc_artificial.ods  gtx480_ebcot_mqc_cathedral.csv
gpu_jpeg2k/tier1/: CMakeLists.txt  dequantizer.cu  quantizer.cu
gpu_jpeg2k/tier1/bpc/: gpu_bpc.cu  test_gpu_bpc.cpp
gpu_jpeg2k/tier1/coeff_coder/: CMakeLists.txt  coeff_coder_pcrd.cu  coeff_coder_pcrd.cuh  gpu_coder.h  gpu_coeff_coder.cpp  gpu_coeff_coder2.cu  gpu_coeff_coder2.cuh  gpu_mq-coder.cuh
gpu_jpeg2k/tier1/ebcot/: CMakeLists.txt  coeff_coder_pcrd.cu  coeff_coder_pcrd.cuh  gpu_coder.h  gpu_coeff_coder.cpp  gpu_coeff_coder2.cu  gpu_coeff_coder2.cuh
gpu_jpeg2k/tier1/ebcot/mqc/: CMakeLists.txt  mqc_develop.cu  mqc_wrapper.cpp  mqc_wrapper.h
gpu_jpeg2k/tier2/: CMakeLists.txt  buffer.c  buffer.h  codestream.c  tag_tree_encode.c  tag_tree_encode.h  write_codestream.c  write_codestream.h
gpu_jpeg2k/types/: CMakeLists.txt  buffered_stream.c  buffered_stream.h  image.c  image.h  image_bil.c  image_bip.c  image_bsq.c  image_ordinary.c  image_raw.c  image_raw.h  image_types.h
klt/: calc_cov.cu  mct_transform.h  reduce.cu
tier1/coeff_coder/: gpu_coeff_coder.cpp  gpu_coeff_coder2.cuh
tier1/ebcot/: gpu_coeff_coder2.cuh
tier2/: buffer.c  codestream.c  tag_tree_encode.h
types/: buffered_stream.h  image.c
